# src/adapters/drivers/http/controllers/validations/create-job.validate.ts
@@ -5,6 +5,7 @@ export const createJobSchema = z.object({
   company_id: z.string().uuid(),
   proposal_id: z.string().uuid(),
   estimate_request_id: z.string().uuid(),
+  estimate_id: z.string().uuid(),
 });
 
 export class CreateJobProps extends createZodDto(createJobSchema) {}
